<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/back"
        android:title="Back"
        app:showAsAction="always"
        />

    <item
        android:id="@+id/email3"
        android:title="pp"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_list"
        android:title="@string/list"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_cardview"
        android:title="@string/cardview"
        app:showAsAction="never"/>
    <item
        android:id="@+id/tampilReq"
        android:title="Tampil Request User"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/login"
        android:title="Login As Admin"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/regisadmin"
        android:title="Tambah Admin"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/tampilinfo"
        android:title="Info"
        app:showAsAction="never" />
    <item
        android:id="@+id/setting"
        android:title="@string/setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/logout"
        android:title="Logout"
        app:showAsAction="never"
        />


</menu>