<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/color1"
    >
    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="7dp"
        app:cardBackgroundColor="@color/l"
        android:elevation="0.5dp"
        app:cardUseCompatPadding="true"
        >
        <ImageView
            android:id="@+id/gambar"
            android:layout_width="150dp"
            android:layout_height="175dp"
            android:src="@drawable/tes"
            android:layout_marginBottom="20dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/app_name" />

        <TextView
            android:id="@+id/judul"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="175dp"
            android:textStyle="bold"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/putih"
            android:fontFamily="sans-serif-condensed-light"
            android:text="After"
            android:textSize="27dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sinopsis"
            android:textColor="@color/putih"
            android:textSize="13dp"
            android:layout_marginTop="40dp"
            android:layout_marginStart="175dp"
            android:maxLines="5"
            android:ellipsize="end"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/putih"
            android:id="@+id/keterangan"
            android:textSize="10dp"
            android:layout_marginTop="13dp"
            android:text="release"
            android:layout_marginStart="377dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tahun"
            android:textSize="10dp"
            android:textColor="@color/putih"
            android:text="9 November 2012"
            android:layout_marginTop="180dp"
            android:layout_marginStart="30dp"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn1"
            android:text="@string/btn1"
            android:layout_marginTop="135dp"
            android:layout_marginStart="175dp"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btn2"
            android:text="@string/btn2"
            android:layout_marginTop="135dp"
            android:layout_marginStart="280dp"
            />
    </androidx.cardview.widget.CardView>

</RelativeLayout>